# hifumin-mirror

./: .gitignore  100003.json  100005.json  100009.json  10001.json  100012.json  100015.json  100017.json  100019.json  100021.json  100022.json  100024.json  100027.json  10003.json  100030.json  100040.json  100041.json  100042.json  100047.json  10005.json  100053.json  100054.json  100055.json  100057.json  10006.json  100063.json  100068.json  10007.json  100070.json  100072.json  100073.json  100074.json  100076.json  10008.json  100080.json  100082.json  100084.json  100095.json  1001.json  100100.json  (+238490 more)
.github/: workflow.yml
.github/workflows/: mirror.yml
data/: 1.json  10.json  100.json  1000.json  100000.json  100001.json  100002.json  100004.json  100007.json  100008.json  100010.json  100011.json  100013.json  100014.json  100016.json  100018.json  10002.json  100020.json  100023.json  100024.json  100025.json  100026.json  100028.json  100029.json  100031.json  100032.json  100033.json  100034.json  100035.json  100037.json  100038.json  100039.json  10004.json  100043.json  100044.json  100045.json  100046.json  100049.json  100050.json  100051.json  (+193307 more)
data/data/: 110.json  131.json  183.json  190.json  31.json  61.json  85.json  88.json
ops/setup/data/: searchable1.json  searchable10.json  searchable11.json  searchable12.json  searchable13.json  searchable14.json  searchable15.json  searchable16.json  searchable17.json  searchable18.json  searchable19.json  searchable2.json  searchable20.json  searchable3.json  searchable4.json  (+5 more)
src/: index.ts
