[package]
name = "sirin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
actix-web = "4.1.0"
cached = "0.34.0"
futures = "0.3.21"
meilisearch-sdk = "0.17.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
tokio = "1.18.0"
reqwest = { version = "0.11.11", features = ["json"] }
lazy_static = "1.4.0"
